syntax = "proto3";

package users;

option go_package = "github.com/OrIX219/SomethingSocial/internal/users";

service UsersService {
  rpc AddUser(AddUserRequest) returns (google.protobuf.Empty) {}
  rpc GetKarma(GetKarmaRequest) returns (GetKarmaResponse) {}
  rpc UpdateKarma(UpdateKarmaRequest) returns (google.protobuf.Empty) {}
}

message AddUserRequest {
  int64 user_id = 1;
  string name = 2;
}

message GetKarmaRequest {
  int64 user_id = 1;
}

message GetKarmaResponse {
  int64 amount = 1;
}

message UpdateKarmaRequest {
  int64 user_id = 1;
  int64 delta = 2;
}
